--- a/style.css
+++ b/style.css
@@ -1,17 +1,13 @@
 div.container {
-    border: 3px solid black;
+    border: 1px dashed black;
     border-radius:10px;
     max-width: 1600;
     height: auto;
-    align-items: center;
-    align-content: center;
     padding:20px;
-    max-width: 800px;
-    align-self: center;
     margin: auto;
+    max-width: 800px;
     margin-top: 30px;
     background-color: pink;
-    align-content: stretch;
 
 }
 
@@ -23,7 +19,7 @@ div.container {
 }
 
 .container div  div{
-    border : 2px solid black;
+    background-color: rgb(251, 220, 225);
     margin:5px;
     height: 20px;
     width: 20px;
