--- a/style.css
+++ b/style.css
@@ -14,15 +14,18 @@ div.container {
 .container div {
     margin:5px;
     height: 30px;
-    display: flex;
-    align-items: stretch;
+    text-align: center;
 }
 
 .container div  div{
     background-color: rgb(251, 220, 225);
+    border-radius: 100%;
     margin:5px;
-    height: 20px;
-    width: 20px;
-    flex: 1;
-    display: flex;
+    height: 30px;
+    width: 30px;
+    display: inline-block;
+    margin: 5px;
+}
+.container div div:hover {
+    background-color: red;
 }
