--- a/style.css
+++ b/style.css
@@ -1,20 +1,54 @@
-div.container {
-    border: 1px dashed black;
+body {
+    background-image: url('/home/fati/repos/Etch-a-Sketch/images.jpeg');
+  }
+
+h1 {
+    color: pink;
+    text-shadow: 2px 2px black;
+    text-shadow:  0 3px #FF0000, 0 0 5px #0000FF;
+    font-size: 60px;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+
+.container {
+
+    max-width: 1000px;
     background-color: pink;
-    border-radius:10px;
-    max-width: 800;
-    display: flex;
-    height: 100px;
-    margin-top: 30px;
+    height: 1000px;
     flex-wrap: wrap;
-    height: 800px;
-    margin-left: auto;
+    flex-direction: column;
+    margin: 0 auto;
+    box-shadow: 2px 'red';
+  }
 
 
+button {
+     font-size: 30px;
+     padding: 20px;
+     margin-top: 50px;
+     flex:1 ;
+}
+
+button:hover {
+    background-color: pink;
+    color: white;
+}
+
+.buttonContainer {
+    display: flex;
+    align-items: center;
+    max-width: 1000px;
+    margin: auto;
+    align-content: space-between;
+}
+
+.gridCell:hover  {
+
+    background-color : red;
 }
 
 
-.grid-square {
-    background-color: white;
-    border-radius: 5px;
-}
+
